# docs/swagger.yaml
@@ -237,6 +237,8 @@ definitions:
     - 2005
     - 2006
     - 2007
+    - 2008
+    - 2009
     - 40201
     - 5000
     - 5001
@@ -245,6 +247,7 @@ definitions:
     - 5004
     type: integer
     x-enum-comments:
+      CodeAlreadyEnrolled: employee already enrolled
       CodeBadRequest: invalid request parameters
       CodeBusinessError: generic business error
       CodeConflict: resource conflict
@@ -254,6 +257,7 @@ definitions:
       CodeFaceVerifyFailed: face verification failed
       CodeForbidden: forbidden
       CodeIDCardNotMatch: id card information not matched
+      CodeIdentityNotFound: identity not found
       CodeInternalError: internal server error
       CodeInvalidParameter: invalid parameter
       CodeKYCFailed: kyc verification failed
@@ -285,6 +289,8 @@ definitions:
     - id card information not matched
     - face not matched
     - resource conflict
+    - identity not found
+    - employee already enrolled
     - quota exceeded, please upgrade your plan
     - internal server error
     - database error
@@ -309,6 +315,8 @@ definitions:
     - CodeIDCardNotMatch
     - CodeFaceNotMatch
     - CodeConflict
+    - CodeIdentityNotFound
+    - CodeAlreadyEnrolled
     - CodePaymentRequired
     - CodeInternalError
     - CodeDatabaseError
@@ -471,6 +479,8 @@ definitions:
     - 2005
     - 2006
     - 2007
+    - 2008
+    - 2009
     - 40201
     - 5000
     - 5001
@@ -479,6 +489,7 @@ definitions:
     - 5004
     type: integer
     x-enum-comments:
+      CodeAlreadyEnrolled: employee already enrolled
       CodeBadRequest: invalid request parameters
       CodeBusinessError: generic business error
       CodeConflict: resource conflict
@@ -488,6 +499,7 @@ definitions:
       CodeFaceVerifyFailed: face verification failed
       CodeForbidden: forbidden
       CodeIDCardNotMatch: id card information not matched
+      CodeIdentityNotFound: identity not found
       CodeInternalError: internal server error
       CodeInvalidParameter: invalid parameter
       CodeKYCFailed: kyc verification failed
@@ -519,6 +531,8 @@ definitions:
     - id card information not matched
     - face not matched
     - resource conflict
+    - identity not found
+    - employee already enrolled
     - quota exceeded, please upgrade your plan
     - internal server error
     - database error
@@ -543,6 +557,8 @@ definitions:
     - CodeIDCardNotMatch
     - CodeFaceNotMatch
     - CodeConflict
+    - CodeIdentityNotFound
+    - CodeAlreadyEnrolled
     - CodePaymentRequired
     - CodeInternalError
     - CodeDatabaseError
